plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.money.maker'
version = '0'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', '2023.0.2')
    set('springBootVersion', '3.2.5')
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = rootProject.group
    version = rootProject.version

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    test {
        useJUnitPlatform()
    }

    tasks.register('printUsedName') {
        doLast {
            println project.name
        }
    }
    tasks.register('printUsedVersion') {
        doLast {
            println project.version
        }
    }
}